src/surveyinterface/static/css/style.css
html, body{
    height:99.99%;
    width:100%;
    margin: 0;
    padding: 0;
    min-width: 1000px;
    overflow:auto;
    overflow-x: hidden;
}

.y.axisRight text {
    fill: orange;
}

.y.axisLeft text {
    fill: steelblue;
}

.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.bar1 {
  fill: steelblue;
}

.bar2 {
  fill: orange;
}

.x.axis path {
  display: none;
}

#visualizationContent{
    height: 100%;
    text-align: center;
    width:calc(100% - 300px);
    float:right;
    background:#fff;
    overflow: hidden;
}

.thumbnail{
    width:200px;
    float:left;
    margin:20px;
}

.thumbnail .caption {
    padding: 9px;
    color: #333;
    float: left;
    width: 150px;
}

#listQuestions .thumbnail{
    float:none;
    margin:10 auto;
    border:0;
}

#listQuestions .thumbnail img{
    float:left;
    display:inline;
}

#listQuestions .thumbnail h4, #listQuestions .thumbnail p{
    display:inline;
    float:left;
    width:auto;
}

.dropdown{
    text-align: left;
}

.dropdown-menu{
    margin-top: 10px;
}

.thumbnail img{
    height: 50px;
}
/*
.accordion-toggle:after {
    font-family: 'Glyphicons Halflings';
    content: "\e114";
    float: right;
    color: grey;
}*/

#surveyContainer{
    width:1000px;
    height:calc(100% - 51px);
    margin:auto;
    margin-top: 20px;
}

svg{
    cursor: default;
}

#mainContent{
    height:calc(100% - 50px);
    overflow:auto;
    margin-top: 50px;
}

#listQuestions{
    width: 300px;
    height: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
    float:left;
    margin-bottom: 0;
    border-right: 1px solid #ddd;
}

#listQuestions a, #listQuestions h4{
    width:270px;
    color: #000000 !important;
    cursor:default;
    text-decoration: none;
    font-size: 14px;
    margin:0 !important;
    display: inline-block;
}
#listQuestions .panel-collapse label{

}

#top-bar{
    float:right;
    width:100%;
    border-bottom: 1px solid #aaa;
    padding:4px;
    margin-bottom:5px;
    height: 90px;
}

#options{
    width:300px;
    height:100px;
    float:right;
}

#labels{
    width:30%;
    height:100px;
    float:left;
}

#options .dropdown{
    width: 198px;
    float:right;
}

#options .btn-group{
    float:right;
}

#options .dropdown button{
    width: 198px;
}

#captionContainer{
    width:calc(100% - 300px);
    height:100px;
    float:left;
}

#btnCategories{
    margin-top:10px
}

hr{
    margin:0;
}

.radio, .checkbox {
    display: block;
    min-height: 0;
    margin-top: 0;
    margin-bottom: 0;
    padding-left: 0;
}

#listQuestions .caret{
    float:right;
    margin-right:-7px;
}

#listQuestions li{
    padding:10px 10px;
    outline: none;
    list-style-type: none;
}

.panel-collapse li{
    border-bottom: 1px solid #aaa;
}

.panel-collapse li{
    padding-top:3px !important;
    padding-bottom:3px !important;
}

.even{
    background:#ddd;
}

.odd{
    background:#eee;
}


#listQuestions li:not(.indented){
    border: 1px solid #aaa;
    border-top:0px;
}

#listQuestions li:hover{
    background-color: rgb(172, 250, 255);
}

.indented{
    padding-left:20px !important;
    border-left: 10px solid rgb(131, 131, 131);
    border-right:1px solid #aaa;
}


#CollisionToggleContainer{
    display: inline;
}

.node text{
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.tooltip {
	position: absolute;
	top: 100px;
	left: 100px;
    -moz-border-radius:5px;
	border-radius: 5px;
    border: 2px solid #000;
	/* background: #222222; */
    background: #fff;
	opacity: .9;
	/* color: #eeeeee; */
    color: black;
	padding: 10px;
	font-size: 12px;
	z-index: 10;
}

.tooltip .title {
	font-size: 13px;
}

.tooltip .name {
  font-weight:bold;
}

#listQuestions label, a{
    font-weight:normal;
    font-size: 14px;
    color:#000;
}

li .checkbox{
    margin-left:10px;
}

#txtTitle{
    font-size:18px;
    text-align:left;
    float:right;
    height:auto;
    width:auto;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    margin-left: 10px;
}

#txtDescription{
    font-size:18px;
    text-align:left;
    float:right;
    height:auto;
    width:auto;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    margin-left: 10px;
    text-shadow: -1px 1px #6C6C6C;
}

.descriptionContainer{
    color:#fff;
    background: rgb(103, 180, 182);
    border:1px solid #4F4F4F;
    border-radius:5px;
    padding:5px;
    padding-left:15px;
    padding-right:15px;
    clear:left;
    margin:5px;
    float: left;
    display: none;
}

.titleContainer{
    color:#000;
    border:1px solid #4F4F4F;
    border-radius:5px;
    padding:5px;
    padding-left:15px;
    padding-right:15px;
    clear:left;
    margin:5px;
    float: left;
    display: none;
}

.active{
    background: rgb(103, 180, 182) !important;
    color:#fff !important;
}

.active label{
    color:#fff !important;
}

body,
html {
    width: 100%;
    height: 100%;
}

body,
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
}

.lead {
    font-size: 18px;
    font-weight: 400;
}

.intro-header {
    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
    padding-bottom: 50px;
    text-align: center;
    color: #f8f8f8;
    background: url(../img/intro-bg.jpg) no-repeat center center;
    background-size: cover;
}

.intro-message {
    position: relative;
    padding-top: 20%;
    padding-bottom: 20%;
}

.intro-message > h1 {
    margin: 0;
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
    font-size: 5em;
}

.intro-divider {
    width: 100%;
    border-top: 1px solid #f8f8f8;
    border-bottom: 1px solid rgba(0,0,0,0.2);
}

.intro-message > h3 {
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
}

@media(max-width:767px) {
    .intro-message {
        padding-bottom: 15%;
    }

    .intro-message > h1 {
        font-size: 3em;
    }

    ul.intro-social-buttons > li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.intro-social-buttons > li:last-child {
        margin-bottom: 0;
    }

    .intro-divider {
        width: 100%;
    }
}

.network-name {
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 400;
    letter-spacing: 2px;
}

.content-section-a {
    padding: 50px 0;
    background-color: #f8f8f8;
}

.content-section-b {
    padding: 50px 0;
    border-top: 1px solid #e7e7e7;
    border-bottom: 1px solid #e7e7e7;
}

.section-heading {
    margin-bottom: 30px;
}

.section-heading-spacer {
    float: left;
    width: 200px;
    border-top: 3px solid #e7e7e7;
}

.banner {
    padding: 100px 0;
    color: #f8f8f8;
    background: url(../img/banner-bg.jpg) no-repeat center center;
    background-size: cover;
}

.banner h2 {
    margin: 0;
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
    font-size: 3em;
}

.banner ul {
    margin-bottom: 0;
}

.banner-social-buttons {
    float: right;
    margin-top: 0;
}

@media(max-width:1199px) {
    ul.banner-social-buttons {
        float: left;
        margin-top: 15px;
    }
}

@media(max-width:767px) {
    .banner h2 {
        margin: 0;
        text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
        font-size: 3em;
    }

    ul.banner-social-buttons > li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.banner-social-buttons > li:last-child {
        margin-bottom: 0;
    }
}

footer {
    padding: 50px 0;
    background-color: #202020;
}

p.copyright {
    margin: 15px 0 0;
}

